--- a/Backend/package.json
+++ b/Backend/package.json
@@ -10,6 +10,10 @@
   "author": "Omer Naeem",
   "license": "ISC",
   "dependencies": {
+    "D": "^1.0.0",
     "nodemon": "^3.1.7"
+  },
+  "devDependencies": {
+    "prettier": "^3.4.2"
   }
 }
